--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,19 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/controllers/chatController.js"></script>
+  <script src="js/controllers/chatDetailController.js"></script>
+  <script src="js/controllers/FriendsController.js"></script>
+  <script src="js/controllers/mapController.js"></script>
+  <script src="js/controllers/meDetailController.js"></script>
+  <script src="js/controllers/menuController.js"></script>
+  <script src="js/controllers/moreController.js"></script>
+  <script src="js/controllers/moreDetailController.js"></script>
+  <script src="js/controllers/newController.js"></script>
+  <script src="js/controllers/newDetailController.js"></script>
+  <script src="js/controllers/profileDetailMeController.js"></script>
+  <script src="js/controllers/profileDetailNewController.js"></script>
+  
   <script src="js/services.js"></script>
   <script src="lib/moment/moment.js"></script>
   <script src="lib/moment/locale/th.js"></script>
